Dodati IUser i User
Dodat interfejs IUser kao i klasa User koja ga nasleđuje. Potrebno je napraviti još klase Block i Miner kao osnovu za dalji rad.

--- a/Blockchain/Common/Common.csproj
+++ b/Blockchain/Common/Common.csproj
@@ -42,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interfejsi\ISmartContract.cs" />
+    <Compile Include="Interfejsi\IUser.cs" />
     <Compile Include="Klase\SmartContract.cs" />
+    <Compile Include="Klase\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
