--- a/Blockchain/Common/Common.csproj
+++ b/Blockchain/Common/Common.csproj
@@ -41,8 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfejsi\IBlock.cs" />
+    <Compile Include="Interfejsi\IBlockChain.cs" />
+    <Compile Include="Interfejsi\IMiner.cs" />
     <Compile Include="Interfejsi\ISmartContract.cs" />
     <Compile Include="Interfejsi\IUser.cs" />
+    <Compile Include="Klase\Block.cs" />
+    <Compile Include="Klase\BlockChain.cs" />
+    <Compile Include="Klase\Miner.cs" />
     <Compile Include="Klase\SmartContract.cs" />
     <Compile Include="Klase\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
