Ubaceni testovi za Block i BlockChain

--- a/Blockchain/BlockchainTest/BlockchainTest.csproj
+++ b/Blockchain/BlockchainTest/BlockchainTest.csproj
@@ -60,6 +60,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BlockChainTest.cs" />
+    <Compile Include="BlockTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SmartContractTest.cs" />
   </ItemGroup>
